--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ main ]
 
 jobs:
   test:
@@ -18,16 +18,6 @@ jobs:
         with:
           go-version-file: 'go.mod'
           cache: true
-
-      - name: Verify formatting
-        run: |
-          fmt_out=$(gofmt -s -l .)
-          if [ -n "$fmt_out" ]; then
-            echo "Files not gofmt'ed:" && echo "$fmt_out" && exit 1
-          fi
-
-      - name: Build
-        run: go build ./...
 
       - name: Vet
         run: go vet ./...
